# sony-head-tracker-linux

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  PORTING.md  README.md  app.manifest  app.rc  build-tests.cmd  build.cmd  xm5_head_tracker.cpp
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: compatibility_report.yml
.github/workflows/: build.yml  linux.yml
docs/: ARCHITECTURE.md  LINUX.md  MACOS.md  PROTOCOL.md
extras/: 70-sony-head-tracker.rules  opentrack-sony-head-tracker.ini
gui/: README.md  io.github.sonyheadtracker.desktop  sony_head_tracker_gui.py
include/sony_head_tracker/: app_config.hpp  bluetooth.hpp  device.hpp  diagnostics.hpp  gui.hpp  hid_backend.hpp  hid_descriptor.hpp  hid_report_parser.hpp  hid_usages.hpp  logger.hpp  macos_support.hpp  math.hpp  orientation.hpp  output_udp.hpp  platform_compat.hpp  protocol.hpp  sensor_api_backend.hpp  types.hpp  version.h  version.hpp  windows_prelude.hpp
macos/: project.yml
macos/Bridge/: sony_head_tracker_c.mm
macos/SonyHeadTracker.xcodeproj/: project.pbxproj
packaging/appimage/: README.md  build-appimage.sh
packaging/aur/: .SRCINFO  PKGBUILD  sony-head-tracker-git.install
packaging/deb-rpm/: README.md  build-packages.sh  postinst.sh
packaging/debian/: README.md  changelog  control  postinst  rules
packaging/rpm/: sony-head-tracker.spec
scripts/: connect-headset-hid.sh  install-opentrack.sh  recenter.sh  setup-recenter-shortcut.sh  setup-steam-game.sh
src/: app_config.cpp  app_config_store.cpp  bluetooth.cpp  diagnostics.cpp  diagnostics_report.cpp  gui.cpp  hid_backend.cpp  hid_descriptor.cpp  logger.cpp  main.cpp  math.cpp  orientation.cpp  output_udp.cpp  protocol.cpp  sensor_api_backend.cpp
src/linux/: hid_backend_linux.cpp  hid_report_parser.cpp  logger_linux.cpp  main_linux.cpp  platform_compat.cpp
src/macos/: app_config_store_macos.cpp
tests/: config_tests.cpp  descriptor_tests.cpp  diagnostics_tests.cpp  macos_persistence_tests.cpp  macos_support_tests.cpp  math_tests.cpp  orientation_tests.cpp  protocol_tests.cpp  report_parser_tests.cpp  test_framework.hpp  test_main.cpp
tools/: make-icon.ps1
